--- a/public/src/app/reports.scss
+++ b/public/src/app/reports.scss
@@ -21,7 +21,7 @@ $single_stackbar_chart_height: 120px;
 
 #date_range{
 	font-size:12px;
-  height:20px;
+  	height:20px;
 
 }
 
@@ -32,7 +32,7 @@ $single_stackbar_chart_height: 120px;
 }
 
 .report-container{
-  margin:-15px -20px; 
+  margin:-$common-padding; 
   padding:0 0;
 }
 
